# shaken2

./: .gitignore  Cargo.toml  build.rs  default_templates.toml  foo.toml
src/: args.rs  bot.rs  command.rs  config.rs  context.rs  database.rs  handler.rs  http.rs  kv.rs  lib.rs  macros.rs  name_and_id.rs  passive.rs  resolver.rs  responder.rs  room.rs  secrets.rs  serde_util.rs  state.rs  tracker.rs  twitch.rs  user.rs  util.rs  watcher.rs
src/args/: dirs.rs  dump.rs  edit.rs  init.rs  mod.rs  templates.rs  unknown.rs  verify.rs
src/config/: directories.rs  mod.rs  secrets.rs  shakespeare.rs  whatsong.rs
src/format/: mod.rs  timestamp.rs
src/handler/: command.rs  mod.rs  passive.rs
src/http/: helpers.rs  mod.rs  twitch.rs
src/modules/: crates.rs  hello.rs  mod.rs  shakespeare.rs  uptime.rs  user_defined.rs  version.rs  viewers.rs  whatsong.rs
src/modules/user_defined/: mod.rs  registry.rs  response.rs
src/modules/user_defined/sql/: add_user_command.sql  all_builtin.sql  all_commands.sql  all_commands_for.sql  create_registry.sql  lookup.sql  remove.sql  reserve.sql  update.sql
src/responder/: logging.rs  mod.rs  null.rs  writer.rs
src/store/: mod.rs  resolver.rs  state.rs  tracker.rs
src/util/: error.rs  mod.rs  serde.rs  time.rs  ty.rs
