[package]
name = "shaken"
version = "0.1.0"
authors = ["museun <museun@outlook.com>"]
repository = "https://github.com/museun/shaken"
edition = "2018"
build = "build.rs"

# [[bin]]
# name = "shaken"
# path = "src/bin/shaken.rs"

[features]
#default = ["rustls"]
#rustls = ["reqwest/rustls-tls"]

[dependencies]
alto_logger = "0.1.2"
anyhow      = "1.0.27"
client      = { git = "https://github.com/museun/brain" }
dirs        = "2.0.2"
futures     = { version = "0.3.4", default-features = false, features = ["alloc"] }
log         = { version = "0.4.8", features = ["std"] }
once_cell   = "1.3.1"
pico-args   = "0.3.1"
rand        = { version = "0.7.3", features = ["small_rng"] }
reqwest     = { version = "0.10.4", default-features = false, features = ["json", "gzip", "rustls-tls"] }
rusqlite    = { version = "0.21.0", features = ["bundled"] } 
serde       = { version = "1.0.105", features = ["derive"] }
serde_cbor  = "0.11.1"
serde_json  = "1.0.48"
template    = { git = "https://github.com/museun/template", features = ["derive", "toml"] }
time        = { version = "0.2.9", features = ["serde"] }
tokio       = { version = "0.2.13", features = ["full", "macros"] }
toml        = "0.5.6"

# TODO enable per-target compilation when https://github.com/rust-lang/cargo/issues/7915 is stable
twitchchat = { version = "0.9.2", default-features = false, features = ["tokio_rustls"] }

# these must be pinned because of dumb decisions
notify = "=5.0.0-pre.1"
crossbeam-channel = "=0.3.9"

[dev-dependencies]
tokio = { version = "0.2.13", features = ["test-util", "time"] }
httptest = "0.12.2"

# don't optimize the c library
[profile.release.package.libsqlite3-sys]
debug = 0
opt-level = 0

[profile.release.build-override]
opt-level = 0

[patch.crates-io]
mio = { git = "https://github.com/museun/mio", branch = "winapi03" }
