[package]
name = "shaken"
version = "0.1.0"
authors = ["museun <museun@outlook.com>"]
repository = "https://github.com/museun/shaken"
edition = "2018"
build = "build.rs"

[dependencies]
alto_logger     = "0.1.2"
anyhow          = "1.0.27"
client          = { git = "https://github.com/museun/brain", rev = "4da36d7b4d11a2ba76391d428302bd872cf1b5a8" }
dirs            = "2.0.2"
futures         = { version = "0.3.4", default-features = false }
log             = { version = "0.4.8", features = ["std"] }
once_cell       = "1.3.1"
pico-args       = "0.3.1"
rand            = { version = "0.7.3", features = ["small_rng"] }
reqwest         = { version = "0.10.4", default-features = false, features = ["json", "gzip", "default-tls"] }
serde           = { version = "1.0.105", features = ["derive"] }
serde_cbor      = "0.11.1"
serde_json      = "1.0.48"
simple_env_load = "0.1.0"
sqlx            = { git = "https://github.com/launchbadge/sqlx.git", rev = "d8a793a7666e47a0bb210e30214a5f777e959d83", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "time"] }
template        = { git = "https://github.com/museun/template", rev = "ece485f2a71d7b89441db54329aff541c84fe4af", features = ["derive", "toml"] }
time            = { version = "0.2.9", features = ["serde"] }
tokio           = { version = "0.2.13", features = ["full", "macros"] }
toml            = "0.5.6"
twitchchat      = "0.9.2"

# these must be pinned because of dumb decisions
notify = "=5.0.0-pre.1"
crossbeam-channel = "=0.3.9"

[dev-dependencies]
tokio = { version = "0.2.13", features = ["test-util", "time"] }
httptest = "0.12.2"

[profile.release.build-override]
opt-level = 0

[profile.release.package.libsqlite3-sys]
opt-level = 0
debug = 0

# !!! don't commit this
[patch.crates-io]
mio = { git = "https://github.com/museun/mio", branch = "winapi03" }
